# vpnbyilda

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  support.md
app/application/: exception.py
app/application/commands/: base.py
app/application/dtos/: base.py
app/application/events/: base.py
app/application/queries/: base.py
app/application/services/: jwt_manager.py  notifications.py  payment.py  role_hierarchy.py  secure.py  telegram.py
app/bot/: content.py  deps.py  main.py
app/bot/handlers/: start.py  subscription.py
app/bot/messages/: base.py  config.py  menu.py  (+1 more)
app/configs/: app.py  base.py
app/presentation/: api_builder.py  cookies.py  deps.py  exceptions.py  init_data.py  main.py
app/workers/: taskiq_worker.py
frontend/: Dockerfile  TelegramUser.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/public/: public.html
frontend/src/: .keep  App.jsx  index.jsx
monitoring/vector/: vector.toml
new_frontend/: TelegramUser.js  nginx.conf  package-lock.json  package.json  tailwind.config.js
new_frontend/src/: App.jsx  Layout.jsx  index.jsx
nginx/start/: default.conf.template
nginx/templates/: default.conf.template
scripts/: edit_botpic_from_photo.py  generate_bot_banners.py  generate_botpic.py  generate_description_picture.py
tests/: conftest.py
tests/factories/: __init__.py  core.py
(+225 files in other folders)
